	  visual hints. Today has a yellow background (unchanged), the 
	  selected day cell is bezeled/pushed (was a bold font) and busy 
	  days use a bold font (instead of a tick mark). Always show six 
	  weeks with black text for the chosen month and white text for 
	  the previous and next ones. Use a defined font size so that it 
	  all fits whatever the user choose as a default size.

version 0.35 (2007/12/31)
	* Fix (fingers crossed) timezone bugs and current day timer
	* New website at http://coyote.octets.fr/simpleagenda

version 0.34 (2007/12/13)
	* Fix loading and saving logic : when loading an iCalendar,
	  we used to refresh the view for each appointment and task.
	  Should be quite faster when loading a big calendar. Also, 
	  stop saving unmodified local calendars on exit.
	* Fix position for appointments going outside the day view
	* Show abbreviated date in day view tab
	* Double click on the calendar to add an appointment
	* Fix iCalendar stores data refresh timer
	* Workaround for the element selection problem. Needs a far
	  better solution.

version 0.33 (2007/12/08)
	* Fix dates of summary events
	* Add a visual hint for recurrent events
	* Fix iCalendar date and duration encoding
	* Fix pasteboard interaction
	* Draw appointments with transparency (code from old 
	  http://www.linuks.mine.nu/agenda/agenda-0.1.tar.gz)

version 0.32 (2007/12/07)
	* Add 'SimpleAgenda/Create Task' service
	* Internal modifications and refactoring
	* Add Open tasks category to summary view
	* Enable 24 hours DayView
	* Change iCalStore creation to set store writable flag if 
	  possible without erasing existing data 
	* Show days with appointments in MonthView.
	* Real asynchronous startup for remote stores. Thanks to 
 	  Dennis Leeuw for this bug report (and many others)
	* Fix end date processing for recurrent events : events can 
	  repeat for ever or until a specified date

version 0.31 (2007/11/21)
	* Bug fixes
	* Appointments sorted by date in the summary